kubernetes-kurssi/4/4.2/manifests/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      volumes: # Define volume
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: ping-pong-app
          image: anteropaivarinta/ping-pong-app:latest
          readinessProbe:
            initialDelaySeconds: 10 
            periodSeconds: 5 
            httpGet:
               path: /pings
               port: 3000
          readinessProbe:
            initialDelaySeconds: 10 
            periodSeconds: 5 
            httpGet:
               path: /healthz
               port: 3000
          livenessProbe:
            initialDelaySeconds: 20 
            periodSeconds: 5 
            httpGet:
               path: /pings
               port: 3000

          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
